--- a/theme.css
+++ b/theme.css
@@ -10,7 +10,7 @@
     --primary__dark: #B72626;
     --primary__gradient: linear-gradient(0deg, #EA5050 0%, #B72626 100%);
 
-    --secondary__light: #78BCDB;
+    --secondary__light: #E9F8FF;
     --secondary: #78BCDB;
     --secondary__dark: #78BCDB;
     --secondary__gradient: linear-gradient(0deg, #78BCDB 0%, #78BCDB 100%);
