--- a/components/c-listBrands/index.scss
+++ b/components/c-listBrands/index.scss
@@ -5,18 +5,20 @@
 	justify-content: flex-start;
 	flex-wrap: wrap;
 	position: relative;
-	left: -10px;
+	//left: -10px;
 	li {
 		margin-left: 10;
-		margin-top: 10px;
-		margin-bottom: 10px;
-		margin-right: 20px;
+		margin-top: 15px;
+		margin-bottom: 15px;
+		margin-right: 30px;
 		&:last-of-type {
 			margin-right: 0;
 		}
 	}
 	img {
-		max-height: 30px;
+		max-height: 42px;
+		display: block;
+		width: auto;
 	}
 }
 @media screen and (max-width: 1230px) {
