--- a/components/s-stickyContent/index.scss
+++ b/components/s-stickyContent/index.scss
@@ -18,18 +18,22 @@
 		&.--cards {
 			ul {
 				@include calcWidthForPositionNegative(-15px);
-				display: flex;
-				flex-direction: row;
-				flex-wrap: wrap;
+				column-count: 2;
+				column-gap: 0;
 				li {
-					@include flexWidth(50%);
 					padding: 15px;
+					break-inside: avoid-column;
 					position: relative;
-					&:nth-child(even) {
-						top: 150px;
+					&:nth-child(4),
+					&:nth-child(5),
+					&:nth-child(6){
+						top: 100px;
+						///background: #000;
 					}
 				}
 			}
+
+
 		}
 	}
 	&.--reverse {
@@ -39,12 +43,18 @@
 			padding-left: 50px;
 		}
 		.s-stickyContent__col.--cards {
-			ul li {
-				&:nth-child(odd) {
-					top: 150px;
-				}
-				&:nth-child(even) {
-					top: inherit;
+			ul {
+				li {
+					&:nth-child(1),
+					&:nth-child(2),
+					&:nth-child(3){
+						top: 100px;
+					}
+					&:nth-child(4),
+					&:nth-child(5),
+					&:nth-child(6){
+						top: 0px;
+					}
 				}
 			}
 		}
