--- a/components/c-cardTestmonials/index.scss
+++ b/components/c-cardTestmonials/index.scss
@@ -11,4 +11,11 @@
 	.c-cardVideo {
 		margin-top: 10px;
 	}
+	blockquote {
+		background: transparent;
+		padding-left: 10px;
+		padding-right: 10px;
+		padding-bottom: 10px;
+		font-size: 26px;
+	}
 }
