--- a/theme.css
+++ b/theme.css
@@ -16,7 +16,7 @@
     --secondary__gradient: linear-gradient(0deg, #78BCDB 0%, #78BCDB 100%);
 
     --white: #fff;
-    --white2: #F5F7FA;
+    --white2: #F8F8F8;
     --white3: #ECF3F5;
     --white__gradient: linear-gradient(0deg, #fff 0%, #f2f2f2 100%);
 
