--- a/components/c-tabs/index.scss
+++ b/components/c-tabs/index.scss
@@ -27,9 +27,11 @@
 			li {
 			}
 			a {
+				@include transition();
 				display: block;
 				text-align: center;
 				padding: 20px 25px;
+				border-bottom: 2px solid transparent;
 				* {
 					margin-left: auto;
 					margin-right: auto;
@@ -41,10 +43,17 @@
 					object-fit: contain;
 				}
 				span {
+					@include transition();
 					font-size: 20px;
 					color: var(--text__light);
 					text-align: center;
 					font-weight: var(--fw__semiBold);
+				}
+				&.is-active {
+					border-bottom: 2px solid var(--black);
+					span {
+						color: var(--primary);
+					}
 				}
 			}
 		}
